--- a/SbisParser/appsettings.json
+++ b/SbisParser/appsettings.json
@@ -8,19 +8,20 @@
   },
 
   "SbisSettings": {
-    "DocumentsPath": ".\\temp",
+    "DocumentsPath": "C:\\temp",
     "SchemesPath": ".\\Schemas\\",
     "IsIncorectDocumentsPath": ".\\IncorectFiles",
     "NameTableDataBase": {
-      "invoiceTable": "Temp_SbisInvoice_2",
-      "invoiceItemTable": "Temp_SbisInvoiceItems_2",
+      "invoiceTable": "Temp_SbisInvoice_3",
+      "invoiceItemTable": "Temp_SbisInvoiceItems_3",
       "IsCreateTable": false
     },
     "IsLoadItems": true,
     "MaskFile": "ON_NSCHFDOPPR*.xml",
     "Function": [
       "СЧФ",
-      "СЧФДОП"
+      "СЧФДОП",
+      "ДОП"
     ],
     "WriteToBase": true
   },
