--- a/SbisParser/SbisParser.csproj
+++ b/SbisParser/SbisParser.csproj
@@ -19,6 +19,9 @@
     <None Update="Schemas\facture.xsd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Schemas\sbis.xsd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
