--- a/SbisParser/appsettings.json
+++ b/SbisParser/appsettings.json
@@ -23,7 +23,10 @@
       "СЧФДОП",
       "ДОП"
     ],
-    "WriteToBase": true
+    "WriteToBase": false,
+    "FileListDocument": "C:\\temp\\NO_NDS.8_2461_2461_2461029929246101001_20211021_9A99476E-336A-4870-A182-D5A375709E28.xml",
+    "PdfPath": "C:\\temp\\Pdf",
+    "FileNotFindDocPath": "C:\\Temp\\notfind.json"
   },
   "DataBaseSettings": {
     "DataSource": "1bf.garzdrav.ru,2801",
